# progressive-fiber-uncertainty-viz-standalone

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  CenterlineGenerator.cpp  CenterlineGenerator.h  CenterlineRenderer.cpp  CenterlineRenderer.h  Configuration.h  DistanceTable.cpp  DistanceTable.h  Fiber.cpp  Fiber.h  FiberObserver.h  FiberPublisher.cpp  FiberPublisher.h  FiberRenderer.cpp  FiberRenderer.h  FiberSplatter.cpp  FiberSplatter.h  GaussianFiberSplatter.cpp  GaussianFiberSplatter.h  IsovalueObserver.h  KeyPressInteractorStyle.h  KeyPressObserver.h  Point.h  README.md  VisitationMap.cpp  VisitationMap.h  VisitationMapDebugRenderer.cpp  VisitationMapDebugRenderer.h  VisitationMapRenderer.cpp  VisitationMapRenderer.h  VisitationMapUpdater.cpp  VisitationMapUpdater.h  Voxel.cpp  Voxel.h  main.cpp  main.h
data/: cc-5.vtk  cst-1.vtk  cst-20.vtk  fiber-samples-with-outliers.vtk  fiber-samples-without-outliers.vtk  slf-1.vtk  slf-20.vtk  test-data-dwi-volume.nhdr
data/cc-6/: 2.vtk
data/cst-10/: 10.vtk  2.vtk  3.vtk  4.vtk  9.vtk
data/fibers/cc/cc-6/: 3.vtk  4.vtk
data/fibers/cst/cst-10/: 1.vtk  5.vtk
data/for-each-seedpoint/: 1.vtk  6.vtk
data/open-source/fibers/cc-6/: 5.vtk
data/open-source/fibers/cst-10/: 6.vtk  7.vtk  8.vtk
gpu/: ShaderTest.h
libs/glm/: CMakeLists.txt
src/centerline/: CenterlineRenderer.cpp  CenterlineRenderer.h  DistanceTable.cpp  DistanceTable.h  DistanceTableCollection.cpp  DistanceTableCollection.h  DistanceTablesUpdater.cpp  DistanceTablesUpdater.h
src/dwi/: DWIDataReader.cpp  DWIDataReader.h  DWIRenderer.cpp  DWIRenderer.h  DWISlice.h
src/gui/: OGLWidget.cpp  OGLWidget.h  SelectColorButton.cpp  SelectColorButton.h  UserInterface.cpp  UserInterface.h
src/gui/ui/: MainWindow.h  MainWindow.ui
src/interaction/: FPSMovementHandler.cpp  FPSMovementHandler.h  InteractionManager.h  KeyPressObserver.h  MovementHandler.cpp  MovementHandler.h  TrackBallMovementHandler.cpp  TrackBallMovementHandler.h  WindowHandler.h
src/mri/: MRIDataReader.cpp  MRIDataReader.h  MRIRenderer.cpp  MRIRenderer.h  MRISlice.h
src/shaders/centerline/: fragment.glsl  geometry.glsl
src/shaders/fibers/: vertex.glsl
src/shaders/mri/: fragment.glsl
src/shaders/visitationmap/: compute.glsl  fragment.glsl  vertex.glsl
src/util/: Box.cpp  Box.h  Camera.cpp  Camera.h  DWIDataReader.cpp  DWIDataReader.h  Fiber.cpp  Fiber.h  FiberPublisher.cpp  FiberPublisher.h  FiberRenderer.cpp  FiberRenderer.h  GL.h  RenderElement.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TriangleRenderer.cpp  TriangleRenderer.h
src/util/glm/: CMakeLists.txt
src/visitationmap/: AxisAlignedBoundingBox.h  Cell.cpp  Cell.h  CellFiberMultiMap.cpp  CellFiberMultiMap.h  VisitationMap.cpp  VisitationMap.h  VisitationMapDebugRenderer.cpp  VisitationMapDebugRenderer.h  VisitationMapRenderer.cpp  VisitationMapRenderer.h  VisitationMapUpdater.cpp  VisitationMapUpdater.h
src/visitationmap/gpu/: ShaderTest.cpp  ShaderTest.h
src/visitationmap/gpu/shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/visitationmap/gpu/shaders/centerline/: fragment.glsl  geometry.glsl  vertex.glsl
src/visitationmap/gpu/shaders/dwi/: fragment.glsl  vertex.glsl
src/visitationmap/gpu/shaders/fibers/: fragment.glsl
src/visitationmap/gpu/shaders/visitationmap/: compute.glsl  fragment.glsl  vertex.glsl
